# wayfinder-paths-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG_GUIDE.md  README.md  RUNNER_ARCHITECTURE.md  Terms.md  config.example.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: wayfinder_contract_execute_review.py  wayfinder_deploy_contract_review.py  wayfinder_execute_review.py  wayfinder_hyperliquid_review.py  wayfinder_onchain_review.py  wayfinder_polymarket_review.py  wayfinder_run_script_review.py  wayfinder_session_start.py  wayfinder_strategy_review.py
.opencode/agents/: wayfinder-baseline.md  wayfinder-eval-judge.md  wayfinder-planner.md  wayfinder-quant.md  wayfinder-research.md  wayfinder-sports.md  wayfinder-visual.md  wayfinder.md
.opencode/plugins/: wayfinder-compaction.ts
evals/fixtures/: polymarket_relevance_cases.json
evals/stations/: smoke_mlb_tonight.yaml  sports_graphs.yaml
paths/concentrated-lp-manager/: PROMPT.md  README.md  wfpath.yaml
paths/ens-manager/: README.md
paths/funding-rate-harvester/: PROMPT.md  README.md  wfpath.yaml
paths/infographic-composer/: .gitignore  PROMPT.md  README.md
paths/polymarket-edge-scanner/: PROMPT.md
paths/restaking-yield-stacker/: PROMPT.md
paths/stablecoin-yield-rotator/: CHANGELOG.md  PROMPT.md  README.md  TODO.md  wfpath.yaml
rag/: .env.example  .gitignore  LEARNING_LOG.md  README.md  eval-set.json  package.json  pnpm-lock.yaml  tsconfig.json
rag/migrations/: 001_init.sql  002_hybrid.sql
rag/scripts/: eval.ts  pipeline.ts  query.ts  setup.ts
rag/src/: chunker.ts  db.ts  embed.ts  search.ts  types.ts
scripts/: eval_judge.sh  eval_polymarket_relevance.py  eval_sports_ab.sh  eval_sports_ab_judge.md  eval_station.py  moonwell_dry_run.py  morpho_smoke_test.py  polymarket_smoketest.py  remote_setup_utils.py  sports_canonical_live_smoke.py
wayfinder_paths/: run_strategy.py
wayfinder_paths/core/: config.py  market_intel_log.py  packs.py
wayfinder_paths/mcp/: arg_validation.py  context_guard.py  polymarket_order.py  polymarket_relevance.py  polymarket_summary.py  preview.py  server.py  tool_registry.py  utils.py
wayfinder_paths/paths/: builder.py  cli.py  client.py  heartbeat.py  renderer.py  shells_sync.py
wayfinder_paths/policies/: lifi.py  session.py
wayfinder_paths/quant/: __init__.py  calibration.py  event_sim.py  futures_slate.py  game_slate.py  hyperliquid_prediction_surface.py  market_metrics.py  polymarket_edge.py  prediction_market_payoffs.py  prediction_market_surface.py  prediction_market_validation.py  prop_slate.py  sports_dry_run.py  sports_gateway.py  sports_model_recipes.py  sports_modifiers.py  sports_posterior.py  sports_props.py  sports_ratings.py  sports_simulation.py  workpack_dry_run.py
wayfinder_paths/runner/: api.py  cli.py  daemon.py  db.py  monitor_state.py
wayfinder_paths/tests/: test_config_resolution.py  test_delta_lab_client.py  test_delta_lab_resources.py  test_delta_lab_ts_latest.py  test_direct_research_clients.py  test_eval_station.py  test_event_sim.py  test_futures_slate.py  test_game_slate.py  test_instance_state_client.py  test_instance_state_tools.py  test_market_intel_helpers.py  test_mcp_argument_validation.py  test_mcp_context_guard.py  test_mcp_execute.py  test_mcp_hyperliquid_execute.py  test_mcp_hyperliquid_mid_prices.py  test_mcp_hyperliquid_search.py  test_mcp_hyperliquid_timeseries.py  test_mcp_polymarket_tool.py  test_mcp_profiles.py  test_mcp_research_gateway.py  (+28 more)
(+484 files in other folders)
